build!: require JDK 25 and replace deprecated Swing/AWT APIs
Bumps the minimum build JDK from 17 to 25 and the CI matrix from
17/21/23 to 25/26. Replaces APIs deprecated in newer JDKs
(modelToView, viewToModel, CTRL_MASK/SHIFT_MASK,
getMenuShortcutKeyMask, Class#newInstance) with their modern
equivalents, and adds empty constructors to satisfy javadoc/lint
checks.

Co-Authored-By: Claude <noreply@anthropic.com>